// Rangira Agro Farming - Database Schema
// Paste this code at: https://dbdiagram.io/

// ============================================
// LOCATION HIERARCHY (Rwandan Administrative Structure)
// ============================================

Table province {
  id bigint [pk, increment]
  province_code varchar(10) [unique, not null]
  province_name varchar(100) [unique, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'Top level - Rwandan provinces (e.g., Kigali, Northern, Southern, Eastern, Western)'
}

Table district {
  id bigint [pk, increment]
  district_code varchar(10) [unique, not null]
  district_name varchar(100) [not null]
  province_id bigint [ref: > province.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'Districts within provinces (e.g., Musanze, Nyagatare)'
}

Table sector {
  id bigint [pk, increment]
  sector_code varchar(10) [unique, not null]
  sector_name varchar(100) [not null]
  district_id bigint [ref: > district.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'Sectors within districts'
}

Table cell {
  id bigint [pk, increment]
  cell_code varchar(10) [unique, not null]
  cell_name varchar(100) [not null]
  sector_id bigint [ref: > sector.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'Cells within sectors'
}

Table village {
  id bigint [pk, increment]
  village_code varchar(10) [unique, not null]
  village_name varchar(100) [not null]
  cell_id bigint [ref: > cell.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'Villages - lowest administrative level'
}

// ============================================
// USER MANAGEMENT
// ============================================

Table user {
  id bigint [pk, increment]
  user_code varchar(20) [unique, not null]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  email varchar(100) [unique, not null]
  phone_number varchar(20) [unique, not null]
  password varchar(255) [not null]
  user_type varchar(20) [not null, note: 'FARMER, BUYER, STOREKEEPER, ADMIN']
  status varchar(20) [not null, default: 'ACTIVE', note: 'ACTIVE, SUSPENDED, INACTIVE']
  village_id bigint [ref: > village.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    email
    phone_number
    user_type
    village_id
  }
  
  Note: 'Main user table - farmers, buyers, storekeepers, admins'
}

Table user_profile {
  id bigint [pk, increment]
  user_id bigint [ref: - user.id, unique, not null]
  national_id varchar(16) [unique]
  date_of_birth date
  gender varchar(10) [note: 'MALE, FEMALE, OTHER']
  profile_picture_url varchar(255)
  bio text
  verified boolean [default: false]
  average_rating decimal(3,2) [default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'ONE-TO-ONE: Extended user profile information'
}

// ============================================
// STORAGE MANAGEMENT
// ============================================

Table storage_warehouse {
  id bigint [pk, increment]
  warehouse_code varchar(20) [unique, not null]
  warehouse_name varchar(100) [not null]
  warehouse_type varchar(50) [not null, note: 'COOPERATIVE, PRIVATE, GOVERNMENT']
  total_capacity_kg decimal(12,2) [not null]
  available_capacity_kg decimal(12,2) [not null]
  village_id bigint [ref: > village.id, not null]
  status varchar(20) [not null, default: 'ACTIVE', note: 'ACTIVE, MAINTENANCE, CLOSED']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    warehouse_code
    village_id
    status
  }
  
  Note: 'Physical storage locations/warehouses'
}

Table warehouse_access {
  id bigint [pk, increment]
  user_id bigint [ref: > user.id, not null]
  warehouse_id bigint [ref: > storage_warehouse.id, not null]
  access_level varchar(20) [not null, note: 'OWNER, MANAGER, VIEWER']
  granted_date date [not null]
  expiry_date date
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    (user_id, warehouse_id) [unique]
    user_id
    warehouse_id
  }
  
  Note: 'MANY-TO-MANY: Junction table for User-Warehouse access control'
}

// ============================================
// CROP & INVENTORY MANAGEMENT
// ============================================

Table crop_type {
  id bigint [pk, increment]
  crop_code varchar(20) [unique, not null]
  crop_name varchar(100) [not null]
  category varchar(50) [not null, note: 'CEREALS, LEGUMES, TUBERS, VEGETABLES']
  measurement_unit varchar(20) [not null, note: 'KG, TONS, BAGS']
  description text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'Types of crops (Beans, Maize, Rice, etc.)'
}

Table inventory {
  id bigint [pk, increment]
  inventory_code varchar(20) [unique, not null]
  farmer_id bigint [ref: > user.id, not null]
  warehouse_id bigint [ref: > storage_warehouse.id, not null]
  crop_type_id bigint [ref: > crop_type.id, not null]
  storekeeper_id bigint [ref: > user.id, not null]
  quantity_kg decimal(12,2) [not null]
  remaining_quantity_kg decimal(12,2) [not null]
  quality_grade varchar(5) [not null, note: 'A, B, C, D']
  storage_date date [not null]
  expected_withdrawal_date date
  status varchar(20) [not null, default: 'STORED', note: 'STORED, PARTIALLY_SOLD, SOLD, WITHDRAWN']
  notes text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    inventory_code
    farmer_id
    warehouse_id
    crop_type_id
    status
    storage_date
  }
  
  Note: 'Stored crop records with verified inventory'
}

// ============================================
// TRANSACTION MANAGEMENT
// ============================================

Table transaction {
  id bigint [pk, increment]
  transaction_code varchar(20) [unique, not null]
  inventory_id bigint [ref: > inventory.id, not null]
  buyer_id bigint [ref: > user.id, not null]
  seller_id bigint [ref: > user.id, not null]
  quantity_kg decimal(12,2) [not null]
  unit_price decimal(12,2) [not null]
  total_amount decimal(12,2) [not null]
  storage_fee decimal(12,2) [default: 0]
  transaction_fee decimal(12,2) [default: 0]
  net_amount decimal(12,2) [not null]
  payment_status varchar(20) [not null, default: 'PENDING', note: 'PENDING, PAID, FAILED']
  delivery_status varchar(20) [not null, default: 'PENDING', note: 'PENDING, DELIVERED, CANCELLED']
  transaction_date timestamp [default: `now()`]
  payment_date timestamp
  notes text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    transaction_code
    inventory_id
    buyer_id
    seller_id
    transaction_date
    payment_status
  }
  
  Note: 'Purchase and sale transaction records'
}

// ============================================
// RATING & TRUST SYSTEM
// ============================================

Table rating {
  id bigint [pk, increment]
  rater_id bigint [ref: > user.id, not null]
  rated_user_id bigint [ref: > user.id, not null]
  transaction_id bigint [ref: > transaction.id, not null]
  rating_score integer [not null, note: '1-5 stars']
  rating_type varchar(30) [not null, note: 'QUALITY, RELIABILITY, PAYMENT, COMMUNICATION']
  comment text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    rater_id
    rated_user_id
    transaction_id
    rating_score
  }
  
  Note: 'Rating and trust system for users'
}

